--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
+    "babel-plugin-inline-import-data-uri": "^1.0.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-style-loader": "^4.0.0",
     "mini-css-extract-plugin": "^0.5.0",
