--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-style-loader": "^4.0.0",
     "mini-css-extract-plugin": "^0.5.0",
