--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "express": "^4.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
